--- a/rt.css
+++ b/rt.css
@@ -2,7 +2,7 @@
     width: 200px;
     height: 200px;
     background-color: red;
-    position: relative;
+    position: absolute;
 }
 
 #main-heading {
