--- a/rt.css
+++ b/rt.css
@@ -7,5 +7,9 @@
 
 #main-heading {
   text-align: center;
-  margin-top: 20px;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 24px;
 }
